return empty map of emission factors for now